--- a/views/booking_category_sales_channels_edit.erb
+++ b/views/booking_category_sales_channels_edit.erb
@@ -1,8 +1,8 @@
 <div class="top-navigation-bar">
-  <h2 class="entity-title"><%=t.booking_category_sales_channels_edit.title(@category_sales_channel.sales_channel.name)%></h2>
+  <h2 class="entity-title"><%=t.booking_category_sales_channels_edit.title("#{@category_sales_channel.booking_category.code} - #{@category_sales_channel.sales_channel.name}")%></h2>
 </div>
 <div id="page_wrapper">
-  <div id="content">
+  <div class="content">
 
     <!-- Prices -->
 
@@ -13,11 +13,6 @@
             <h3 class="block-title">Tarifas</h3>
           </div>
           <div class="block-content">
-            <% if @category_sales_channel.price_definition and @category_sales_channel.price_definition.season_definition%>
-            <div>
-              <a href="/admin/rates/seasons/<%=@category_sales_channel.price_definition.season_definition.id%>">Editar temporadas</a>
-            </div>
-            <% end %>
             <div id="category_sales_channel_prices_container">
             </div>
           </div>
