--- a/views/booking_extras_availability.js.erb
+++ b/views/booking_extras_availability.js.erb
@@ -15,7 +15,7 @@ require(['YSDGui','jquery',
       $('#to').val(date_to);
       $('#date_from').prop('disabled',true);
       $('#date_to').prop('disabled',true);      
-      $('form[name=report_charges_form]').submit();
+      $('form[name=availability_form]').submit();
     }
 
   };
