--- a/views/config_booking_advanced.erb
+++ b/views/config_booking_advanced.erb
@@ -15,9 +15,30 @@
 
 <div class="admin_content_wrapper" style="background-color: #f5f5f5; margin: 0">
 
-    <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
+  <br>
 
-    <br>
+  <div class="row">
+    <div class="col-sm-12 col-md-10 col-md-offset-1">
+      <div class="block ">
+        <div class="block-header bg-gray-lighter">
+          <h3 class="block-title"><%=t.booking_front_end.languages_title%></h3>
+        </div>
+        <div class="block-content block-content-narrow">
+          <form name="variables" action="/api/variables" method="PUT"
+                data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
+            <%= render_variable_checkbox_boolean('language.multilanguage_site',
+                                                 t.booking_settings.form.front_end.multilanguage_site) %>
+            <p class="text-muted"><%=t.booking_settings.form.front_end.multilanguage_site_description%></p>
+            <div class="form-group">
+              <div class="col-xs-12">
+                <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <% if booking_renting %>
     <div class="row">
