--- a/views/report_customer_reservations.erb
+++ b/views/report_customer_reservations.erb
@@ -21,10 +21,10 @@
       <form name="report_reservations_form" action="/admin/booking/reports/customer-reservations" method="get">
         <div class="formrow">
           <div style="display: inline-block">
-            <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10"/>
+            <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10"  autocomplete="off"/>
           </div>
           <div style="display: inline-block">
-            <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10"/>
+            <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10"  autocomplete="off"/>
           </div>
           <div style="display: inline-block">
             <input type="hidden" name="from" id="from"/>
