--- a/views/report_resource_reservations.erb
+++ b/views/report_resource_reservations.erb
@@ -19,18 +19,18 @@
         <div class="formrow">
           <div class="container_12">
             <div class="grid_3">
-              <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10"/>
+              <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10" autocomplete="off"/>
             </div>
             <div class="grid_3">
               <div class="left-margin">
-                <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10"/>
+                <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10" autocomplete="off"/>
               </div>
             </div>
             <div class="grid_3">
               <div class="left-margin">              
                 <input type="text" name="stock_plate" id="stock_plate"
                  class="fieldcontrol" maxlength="15" value="<%=@stock_plate%>"
-                 placeholder="Matrícula"/>
+                 placeholder="Matrícula" autocomplete="off"/>
               </div>
             </div>
             <div class="grid_3">
