--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -167,6 +167,34 @@
     <div style="height: 100px; margin-bottom: 100px"></div>
   </div>
 </div>
+<div class="row">
+  <div class="col-lg-3">
+      <div class="block-content block-content-full bg-primary text-center clearfix">
+        <i class="fa fa-question text-white"></i>
+        <span class="font-w600 text-muted text-white">Pendiente de confirmar</span>
+      </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="block-content block-content-full bg-city text-center clearfix">
+      <i class="fa fa-flash text-white"></i>
+      <span class="font-w600 text-muted text-white">Asignación automática</span>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="block-content block-content-full bg-primary text-center clearfix">
+      <i class="fa fa-sticky-note-o text-white"></i>
+      <span class="font-w600 text-muted text-white">Notas</span>
+    </div>
+  </div>
+  <div class="col-lg-3">
+    <div class="block-content block-content-full bg-amethyst text-center clearfix">
+      <i class="fa fa-exclamation-triangle text-white"></i>
+      <span class="font-w600 text-muted text-white">Diferente categoría</span>
+    </div>
+  </div>
+</div>
+
+
 
 <!-- ======================================== -->
 <!--            Reservation modal             -->
@@ -205,11 +233,19 @@
                      data-planning-color="<%%=backgroundColor%>"
                      data-detail="<%%=detail%>"
                      data-notes="<%%=notes%>"
+                     data-confirmed="<%%=confirmed%>"
+                     data-auto-assigned-item-reference="<%%=auto_assigned_item_reference%>"
                      class="planning_reservation"
                      style="<%=@planning_style=='compact' ? 'padding: 5px;' : 'padding:2px; font-size: 10px;'%>display: inline-block; position: absolute; border: 1px solid; border-color: <%%=borderColor%>; color: <%%=color%>; background-color: <%%=backgroundColor%>; overflow:hidden; opacity: 0.8"
  >
     <span style="white-space: nowrap; overflow: hidden; padding-right: 2px"
-          title="<%%=dateFrom%> <% if @product_family.time_to_from %><%%=timeFrom%><%end%> - <%%=dateTo%> <% if @product_family.time_to_from %><%%=timeTo%><%end%>"><%% if (category != requestedCategory) { %><i class="fa fa-exclamation-triangle"></i><%%}%><%% if (notes && notes.length>0){%><i class="fa fa-sticky-note-o"></i><%%}%> #<%%=id%> - <%%= booking_title %></span>
+          title="<%%=dateFrom%> <% if @product_family.time_to_from %><%%=timeFrom%><%end%> - <%%=dateTo%> <% if @product_family.time_to_from %><%%=timeTo%><%end%>">
+       <%% if (confirmed == 0) { %><i class="fa fa-question"></i><%%}%>
+       <%% if (auto_assigned_item_reference == 1) {%><i class="fa fa-flash"></i><%%}%>
+       <%% if (category != requestedCategory) { %><i class="fa fa-exclamation-triangle"></i><%%}%>
+       <%% if (notes && notes.length>0){%><i class="fa fa-sticky-note-o"></i><%%}%>
+       <%% if (confirmed == 0) { %><b><%%}%>#<%%=id%> - <%%= booking_title %><%% if (confirmed == 0) { %></b><%%}%>
+    </span>
   </div>
 </script>
 
@@ -220,6 +256,11 @@
 
   <div class="block">
     <div class="block-content block-content-full">
+      <%% if (booking.confirmed == '0') { %>
+      <div class="alert alert-warning">
+        <p>¡Atención! Reserva <b>pendiente de confirmar</b></p>
+      </div>
+      <%% } %>
       <div class="row">
         <div class="col-sm-12">
           <div class="push-5">
@@ -267,15 +308,17 @@
                 <i class="fa fa-calendar-check-o"></i>&nbsp;<%%=booking.date_to%>
               </div>
           <% end %>
+          <%% if (booking.confirmed == '1') { %>
           <form name="color" style="display: inline-block; position: relative; top: 3px">
             <input type="hidden" name="id" value="<%%=booking.id%>"/>
             <input type="hidden" name="type" value="<%%=booking.origin%>"/>
             <input type="color" name="planning_color" class="color" value="<%%=booking.planning_color%>" style="width:32px; height: 32px"/>
           </form>
+          <%% } %>
         </div>
       </div>
       <% if @product_family.multiple_items? %>
-        <%% if (booking.origin == 'booking') { %>
+        <%% if (booking.origin == 'booking' && booking.confirmed == '1') { %>
         <br>
         <div class="row">
           <div class="col-sm-12">
@@ -354,7 +397,7 @@
                         <%% } %>
                       </label>
                       <div class="col-sm-3">
-                        <input type="text" name="date_from" id="new_reservation_date_from" class="date_control" size="15" maxlength="10"/>
+                        <input type="text" name="date_from" id="new_reservation_date_from" class="date_control" size="15" maxlength="10" autocomplete="off"/>
                       </div>
                       <div class="col-sm-2">
                         <% if @booking_item_family.time_to_from %>
@@ -410,7 +453,7 @@
                       </label>
                       <div class="col-sm-3">
                         <input type="text" name="date_to" id="new_reservation_date_to" class="date_control" size="15" maxlength="10"
-                                           />
+                                           autocomplete="off"/>
                       </div>
                       <div class="col-sm-2">
                         <% if @booking_item_family.time_to_from %>
@@ -455,7 +498,7 @@
 
                     <!-- Driver age -->
                     <%% if (action=='booking') {%>
-                    <% if @booking_item_family and @booking_item_family.driver and @driver_age_rules %>
+                    <% if @booking_item_family and @booking_item_family.driver and @driver_age_rules and @driver_age_rule_definition %>
 
                         <div class="form-group">
                           <label class="col-sm-3 control-label">
