--- a/views/_pickedup_bookings.erb
+++ b/views/_pickedup_bookings.erb
@@ -21,13 +21,13 @@
           <div class="form-group">
             <label class="col-xs-10" for="login1-username">Desde</label>
             <div class="col-xs-10">
-              <input class="form-control date_control" type="text" id="date_from" name="date_from" placeholder="Introduzca fecha desde">
+              <input class="form-control date_control" type="text" id="date_from" name="date_from" placeholder="Introduzca fecha desde" autocomplete="off">
             </div>
           </div>
           <div class="form-group">
             <label class="col-xs-10" for="login1-password">Hasta</label>
             <div class="col-xs-10">
-              <input class="form-control date_control" type="text" id="date_to" name="date_to" placeholder="Introduzca fecha hasta">
+              <input class="form-control date_control" type="text" id="date_to" name="date_to" placeholder="Introduzca fecha hasta" autocomplete="off">
             </div>
           </div>
           <% if (multiple_rental_locations and current_user_manager) or (multiple_rental_locations and current_user_operator and allow_booking_operator_multiple_locations)%>
@@ -83,7 +83,7 @@
       <div class="block-content block-content-full bg-gray-lighter">
         <div class="h1 font-w700" data-toggle="countTo" data-to="<%%=picked_up_count%>"><%%=picked_up_count%></div>
       </div>
-      <div class="block-content block-content-full block-content-mini bg-success text-muted font-w600 text-white">Entregas</div>
+      <div class="block-content block-content-full block-content-mini bg-success text-muted font-w600 text-white"><%= BookingDataSystem.r18n.t.booking_business_literals.starting_date[product_family.starting_date.to_s]['pickup'] %></div>
     </a>
 </script>
 
@@ -92,7 +92,7 @@
       <div class="block-content block-content-full bg-gray-lighter">
         <div class="h1 font-w700" data-toggle="countTo" data-to="<%%=return_count%>"><%%=return_count%></div>
       </div>
-      <div class="block-content block-content-full block-content-mini bg-warning text-muted font-w600 text-white">Devoluciones</div>
+      <div class="block-content block-content-full block-content-mini bg-warning text-muted font-w600 text-white"><%= BookingDataSystem.r18n.t.booking_business_literals.starting_date[product_family.starting_date.to_s]['return'] %></div>
     </a>
 </script>
 
@@ -101,7 +101,7 @@
  <%% if (data.length > 0) { %>
  <div class="block block-bordered">
     <div class="block-header">
-      <h3 class="block-title"><%= t.booking_pickup.title%></h3>
+      <h3 class="block-title"><%= BookingDataSystem.r18n.t.booking_business_literals.starting_date[product_family.starting_date.to_s]['pickup'] %></h3>
     </div>
     <div class="block-content">
     <table id="table" class="table table-striped">
@@ -176,7 +176,7 @@
  <%% if (data.length > 0) { %>
   <div class="block block-bordered">
     <div class="block-header">
-      <h3 class="block-title">Devoluciones</h3>
+      <h3 class="block-title"><%= BookingDataSystem.r18n.t.booking_business_literals.starting_date[product_family.starting_date.to_s]['return'] %></h3>
     </div>
     <div class="block-content">
     <table id="table" class="table  table-striped">
