--- a/views/booking_management_new_reservation.erb
+++ b/views/booking_management_new_reservation.erb
@@ -22,7 +22,7 @@
                 <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival_date):(t.new_booking.pickup_date)%>
               </label>
               <div class="col-sm-2">
-                <input type="text" name="date_from" id="date_from" class="date_control" size="15" maxlength="10"/>
+                <input type="text" name="date_from" id="date_from" class="date_control" size="15" maxlength="10" autocomplete="off"/>
               </div>
               <div class="col-sm-2">
                 <% if booking_item_family.time_to_from %>
@@ -68,7 +68,7 @@
                 <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure_date):(t.new_booking.return_date)%>
               </label>
               <div class="col-sm-2">
-                <input type="text" name="date_to" id="date_to" class="date_control" size="15" maxlength="10"/>
+                <input type="text" name="date_to" id="date_to" class="date_control" size="15" maxlength="10" autocomplete="off"/>
               </div>
               <div class="col-sm-2">
                 <% if booking_item_family.time_to_from %>
