--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -57,9 +57,9 @@
        <tr>
          <th class="table-header-title" scope="col" style="width:80px">#</th>
          <th class="table-header-title" scope="col" style="width:150px"><%= t.booking_management.table.customer %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.category %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.date_from %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.date_to %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:100px"><%=BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['category_singular']%></th>
+         <th class="table-header-title centered_text" scope="col" style="width:100px"><%=BookingDataSystem.r18n.t.booking_business_literals.starting_date[booking_item_family.starting_date.to_s]['pickup_singular']%></th>
+         <th class="table-header-title centered_text" scope="col" style="width:100px"><%=BookingDataSystem.r18n.t.booking_business_literals.starting_date[booking_item_family.starting_date.to_s]['return_singular']%></th>
          <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.status %></th>
          <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.payment_status %></th>
          <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.creation_date %></th>
@@ -255,7 +255,7 @@
                       <%% } %>
                   </li>
                 </ul>
-                <h3 class="block-title"><%= t.booking_management.form.booking_resources.title %></h3>
+                <h3 class="block-title"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['product']%></h3>
             </div>
             <div class="block-content block-content-full">
                 <%= partial :booking_management_resources, :locals => {:booking_item_family => booking_item_family} %>
