--- a/views/setup.erb
+++ b/views/setup.erb
@@ -2,13 +2,16 @@
   <h2 class="entity-title"><%=t.setup_booking.title%></h2>
 </div>
 <div class="admin_content_wrapper">
-  <%= t.setup_booking.welcome %>
-  <br>
-  <br>
-  <% if @booking_renting %>
-    <a href="/admin/booking/setup-renting-1"><%=t.setup_booking.renting%></a>
-  <% end %>
-  <% if @booking_activities %>
-    <a href="/admin/booking/setup-activities-1"><%=t.setup_booking.activities%></a>
-  <% end %>
+  <div class="content">
+    <div class="row">
+      <div class="col-lg-6">
+        <%= t.setup_booking.welcome %>
+        <br>
+        <div class="pull-right">
+          <a href="/admin/booking/setup-step-1" class="btn btn-primary" role="button"><%=t.setup_booking.start%></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
